# automaticVideoAnnotator

./: .gitignore  CMakeLists.txt  README.md
outputAnnotations/: annotationsFrom0.txt
src/: annotateVideo.cpp
src/camShift/: ourCamShift.cpp  ourCamShift.h
src/floodFill/: floodFill.cpp  floodFill.h
src/markArea/: markArea.cpp  markArea.h
src/zoomArea/: zoomArea.cpp  zoomArea.h
